@@ -2,6 +2,7 @@
  - Add basic tests.
  - Improve printing of Catalog to way, that no printing of users and
    month/year if doesnt' exist.
+ - Optimization in creating of Indent object.
 
 0.01 2020-12-19T11:10:18+01:00
  - First version.
